src/main/java/com/example/shopping/common/error/ErrorCodeIfs.java
package com.example.shopping.common.error;

public interface ErrorCodeIfs {

    Integer getHttpStatusCode();

    Integer getErrorCode();

    String getDescription();
}
